# Wakana-Quizz-API

./: .gitignore  main.py  pyproject.toml
database/: scrap.py
routes/: __init__.py  all_letters.py  hiragana.py  katakana.py
schemas/: all_letters.py  hiragana.py
src/: hiragana.json  hiragana.py  katakana.json  katakana.py
