[project]
name = "Wakana-Quizz-Back-End"
author = "addthoriq <alvarro.thoriq@gmail.com>"
version = "0.1.0"
description = "A simple API for learn Hiragana and Katakana"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]
